crates/omnifs-sdk/tests/ui/path_segment/enum_variant_field.rs
#[omnifs_sdk::path_segment]
enum Bad {
    Tuple(String),
}

fn main() {}
